--- a/src/pages/[...lang]/review.astro
+++ b/src/pages/[...lang]/review.astro
@@ -105,20 +105,20 @@ const chatId = import.meta.env.PUBLIC_CHAT_ID;
     </div>
 
     <form id="form" style="display:none">
-      <textarea id="reviewText" placeholder="Partagez votre expérience" required></textarea>
+      <textarea id="reviewText" placeholder="Partagez votre expérience concernant ce lieu" required></textarea>
       <div>
         <label for="month">Date de la visite</label><br />
         <select id="month">
-          <option>Janvier</option><option>Février</option><option>Mars</option>
+          <option selected>Janvier</option><option>Février</option><option>Mars</option>
           <option>Avril</option><option>Mai</option><option>Juin</option>
-          <option selected>Juillet</option><option>Août</option>
+          <option>Juillet</option><option>Août</option>
           <option>Septembre</option><option>Octobre</option>
           <option>Novembre</option><option>Décembre</option>
         </select>
         <select id="year">
-          <option>2024</option>
           <option selected>2025</option>
           <option>2026</option>
+          <option>2027</option>
         </select>
       </div>
       <button id="submit" disabled>Publier</button>
