5 stars is now a html link

--- a/src/pages/[...lang]/review.astro
+++ b/src/pages/[...lang]/review.astro
@@ -101,7 +101,7 @@ const chatId = import.meta.env.PUBLIC_CHAT_ID;
       <span class="stars" data-value="2">&#9733;</span>
       <span class="stars" data-value="3">&#9733;</span>
       <span class="stars" data-value="4">&#9733;</span>
-      <span class="stars" data-value="5">&#9733;</span>
+      <a class="stars" href="https://g.page/r/CTOZ9gJDprgQEAE/review" target="_blank" data-value="5">&#9733;</a>
     </div>
 
     <form id="form" style="display:none">
