--- a/src/pages/[...lang]/review.astro
+++ b/src/pages/[...lang]/review.astro
@@ -91,6 +91,13 @@ const chatId = import.meta.env.PUBLIC_CHAT_ID;
         margin-top: 2rem;
         display: none;
       }
+      a.stars,
+      a.stars:hover,
+      a.stars:visited,
+      a.stars:active,
+      a.stars:focus       {
+        text-decoration : none;    
+      }
     </style>
 
   </head>
